--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>titolo</h1>
+    <h1>titolo</h1>+
     <h2>titolo2</h2>
-    <h3>titolo3</h3>
 </body>
 </html>
